[gd_scene load_steps=27 format=2]

[ext_resource path="res://Enemies/Slime/Slime.png" type="Texture" id=1]
[ext_resource path="res://Collisions/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Collisions/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Slime/Slime.gd" type="Script" id=5]
[ext_resource path="res://Collisions/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Collisions/DetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Collisions/DropZone.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 22 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 16, 22 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Animation",
"speed": 25.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 6.0

[sub_resource type="CircleShape2D" id=16]

[sub_resource type="CircleShape2D" id=17]

[sub_resource type="CircleShape2D" id=31]
radius = 75.0

[node name="Slime" type="KinematicBody2D"]
collision_layer = 68
collision_mask = 33
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "Animation"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 15 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
maxHealth = 6

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 16 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 40

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 17 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="DetectionZone" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 31 )

[node name="DropZone" parent="." instance=ExtResource( 8 )]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="SoftCollision"]

[editable path="DetectionZone"]
